--- a/helm/kyverno/check-image.yaml
+++ b/helm/kyverno/check-image.yaml
@@ -3,7 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: check-image
 spec:
-  validationFailureAction: Enforce
+  validationFailureAction: enforce
   background: false
   webhookTimeoutSeconds: 30
   failurePolicy: Fail
