--- a/helm/kyverno/check-image.yaml
+++ b/helm/kyverno/check-image.yaml
@@ -3,29 +3,26 @@ kind: ClusterPolicy
 metadata:
   name: check-image
 spec:
-  validationFailureAction: enforce
   background: false
-  webhookTimeoutSeconds: 30
   failurePolicy: Fail
+  validationFailureAction: enforce
+  webhookTimeoutSeconds: 30
   rules:
     - name: check-image
       match:
         any:
-        - resources:
-            kinds:
-              - Pod
+          - resources:
+              kinds:
+                - Pod
       verifyImages:
-      - imageReferences:
-        - "ghcr.io/kyverno/test-verify-image*"
-        attestors:
-        - count: 1
-          entries:
-          - keys:
-              publicKeys: |-
-                -----BEGIN PUBLIC KEY-----
-                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM
-                5/KAQN0/KjHcorm/J5yctVd7iEcnessRQjU917hmKO6JWVGHpDguIyakZA==
-                -----END PUBLIC KEY-----                
-              rekor:
-                ignoreTlog: true
-                url: https://rekor.sigstore.dev
+        - attestors:
+            - count: 1
+              entries:
+                - keys:
+                    publicKeys: |
+                      -----BEGIN PUBLIC KEY-----
+                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM
+                      5/KAQN0/KjHcorm/J5yctVd7iEcnessRQjU917hmKO6JWVGHpDguIyakZA==
+                      -----END PUBLIC KEY-----
+          imageReferences:
+            - "ghcr.io/kyverno/test-verify-image*"
