--- a/argocd/grafana-app.yaml
+++ b/argocd/grafana-app.yaml
@@ -13,6 +13,7 @@ spec:
   sources:
   - repoURL: https://github.com/lucas-92/project-repo.git
     targetRevision: HEAD
+    path: argocd
   - repoURL: https://grafana.github.io/helm-charts
     chart: grafana
     targetRevision: 6.52.2
