--- a/argocd/prometheus-app.yaml
+++ b/argocd/prometheus-app.yaml
@@ -13,6 +13,7 @@ spec:
   sources:
     - repoURL: https://github.com/lucas-92/project-repo.git
       targetRevision: HEAD
+      path: argocd
     - repoURL: https://prometheus-community.github.io/helm-charts/
       chart: prometheus
       targetRevision: 19.7.2
