Incluindo o 'ignoreDifferences' para resolver warning de conflito de recursos

--- a/argocd/check-image-app.yaml
+++ b/argocd/check-image-app.yaml
@@ -9,6 +9,11 @@ spec:
     repoURL: https://github.com/lucas-92/project-repo.git
     path: helm/kyverno
     targetRevision: main
+  ignoreDifferences:
+  - group: rbac.authorization.k8s.io
+    kind: ClusterRole
+    jsonPointers:
+      - /rules
     directory:
       recurse: true
   destination:
