--- a/argocd/grafana-app.yaml
+++ b/argocd/grafana-app.yaml
@@ -11,55 +11,56 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   sources:
-  - repoURL: https://github.com/lucas-92/project-repo.git
-    targetRevision: HEAD
-    path: argocd
-  - repoURL: https://grafana.github.io/helm-charts
-    chart: grafana
-    targetRevision: 6.52.2
-    helm:
-      values: |
-        service:
-          type: ClusterIP
-        datasources:
-          datasources.yaml:
-            apiVersion: 1
-            datasources:
-              - name: Prometheus
-                type: prometheus
-                url: http://prometheus-server.monitoring.svc.cluster.local
-                access: proxy
-                isDefault: true
-              - name: loki
-                type: loki
-                url: http://loki.monitoring.svc.cluster.local
-                access: proxy
-        dashboardProviders:
-          dashboardproviders.yaml:
-            apiVersion: 1
-            providers:
-              - name: "default"
-                orgId: 1
-                folder: ""
-                type: file
-                disableDeletion: false
-                editable: true
-                options:
-                  path: /var/lib/grafana/dashboards/default
-        dashboards:
-          default:
-            kubernetes:
-              gnetId: 10000
-              revision: 1
-              datasource: Prometheus
+    - repoURL: https://github.com/lucas-92/project-repo.git
+      targetRevision: HEAD
+      path: argocd
+    - repoURL: https://grafana.github.io/helm-charts
+      chart: grafana
+      targetRevision: 6.52.2
+      helm:
+        values: |
+          service:
+            type: ClusterIP
+          datasources:
+            datasources.yaml:
+              apiVersion: 1
+              datasources:
+                - name: Prometheus
+                  type: prometheus
+                  url: http://prometheus-server.monitoring.svc.cluster.local
+                  access: proxy
+                  isDefault: true
+                - name: loki
+                  type: loki
+                  url: http://loki.monitoring.svc.cluster.local
+                  access: proxy
+          dashboardProviders:
+            dashboardproviders.yaml:
+              apiVersion: 1
+              providers:
+                - name: "default"
+                  orgId: 1
+                  folder: ""
+                  type: file
+                  disableDeletion: false
+                  editable: true
+                  options:
+                    path: /var/lib/grafana/dashboards/default
+          dashboards:
+            default:
+              kubernetes:
+                gnetId: 10000
+                revision: 1
+                datasource: Prometheus
   ignoreDifferences:
-  - group: rbac.authorization.k8s.io
-    kind: ClusterRole
-    jsonPointers:
-      - /rules
+    - group: rbac.authorization.k8s.io
+      kind: ClusterRole
+      jsonPointers:
+        - /rules
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
     syncOptions:
-    - CreateNamespace=true
+      - CreateNamespace=true
+      - Replace=true
