check-image revisado

--- a/argocd/check-image-app.yaml
+++ b/argocd/check-image-app.yaml
@@ -18,6 +18,7 @@ spec:
       jsonPointers:
         - /rules
   syncPolicy:
-    automated
+    automated:
       prune: true
       selfHeal: true
+
