--- a/argocd/kube-prometheus-app.yaml
+++ b/argocd/kube-prometheus-app.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
 spec:
   destination:
-    server: https://kubernetes.default.svc # A URL do servidor Kubernetes
+    server: https://kubernetes.default.svc
     namespace: monitoring
   project: default
   source:
@@ -14,6 +14,7 @@ spec:
     chart: kube-prometheus-stack
   syncPolicy:
     automated:
-      selfHeal: true # Habilita a auto-correção em caso de desvios
+      selfHeal: true
     syncOptions:
-    - CreateNamespace=true # Cria o namespace se ele não existir
+      - CreateNamespace=true
+      - Replace=true
